Bug 219122 - [Regression] debugfs=off breaks ath9k init, error -12 (Atheros AR9287)
Summary: [Regression] debugfs=off breaks ath9k init, error -12 (Atheros AR9287)
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-03 18:41 UTC by dan.g.tob
Modified: 2024-10-08 06:11 UTC (History)
2 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
6.6 dmesg, broken wifi (80.84 KB, text/plain)
2024-08-03 18:41 UTC, dan.g.tob
Details
6.6 dmesg, working wifi (debugfs on) (82.19 KB, text/plain)
2024-08-03 18:42 UTC, dan.g.tob
Details

Description dan.g.tob 2024-08-03 18:41:38 UTC
Created attachment 306659 [details]
6.6 dmesg, broken wifi

Booting with debugfs=off breaks initialisation of Atheros AR9287. Was working previously with 6.1 kernel series.
6.6-6.10 kernels are broken (if debugfs is re-enabled, it DOES work correctly)
Comment 1 dan.g.tob 2024-08-03 18:42:16 UTC
Created attachment 306660 [details]
6.6 dmesg, working wifi (debugfs on)
Comment 2 dan.g.tob 2024-08-03 19:02:19 UTC
It breaks somewhere between 6.5<->6.6, I can possibly do a bisect if necessary, but it will take some time.
Comment 3 Toke Høiland-Jørgensen 2024-08-05 10:42:48 UTC
Thank you for the report!

Could you please try reverting this commit and see if it fixes the issue?

6edb4ba6fb5b ("wifi: ath9k: fix parameter check in ath9k_init_debug()")
Comment 4 Toke Høiland-Jørgensen 2024-08-05 11:50:28 UTC
Patch to fix this posted here: https://lore.kernel.org/r/20240805110225.19690-1-toke@toke.dk
Comment 5 dan.g.tob 2024-08-05 15:35:07 UTC
Can confirm that the above patch fixes it, tested on top of 6.6.44.

You can add `Tested-by: Daniel Tobias <dan.g.tob@gmail.com>` if you'd like, it should maybe also be tagged for stable >=6.6.

Thanks for the quick response!
Comment 6 dan.g.tob 2024-10-08 06:11:08 UTC
Confirmed fixed with the latest batch of stable patches (6.6.54)

Note You need to log in before you can comment on or make changes to this bug.